force-app/main/default/objects/Beast__c/Beast__c.object-meta.xml
<CustomObject>
    <label>Beast</label>
    <nameField>
        <label>Beast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>