force-app/main/default/objects/Beast__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beasts</relationshipLabel>
    <relationshipName>Beasts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>