force-app/main/default/objects/Beast__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>species</valueSetName>
    </valueSet>
</CustomField>